# Danmuji

./: .gitignore  Danmuji.opam  danmuji  dune-project  error.py  invariant.py  main.py
src/: danmuji.ml  dune  invariants.ml  options.ml  utils.ml
test/: daikon.decls  daikon2.decls  fail.dtrace  pass.dtrace  pass2.dtrace
